fixed recipe id referencing, fixed product - recipe referencing, added UI for product list, refined the UI for the recipe, modularized the create recipe form to be more readable
fixed recipe id referencing, fixed product - recipe referencing, added UI for product list, refined the UI for the recipe, modularized the create recipe form to be more readable

--- a/static/css/create.css
+++ b/static/css/create.css
@@ -23,13 +23,25 @@
     flex-direction: column;
 }
 
+#product-list {
+    color: gray;
+    padding: 15px;
+}
+
+#recipe-list {
+    color: gray;
+    padding-bottom: 10px;
+}
+
 .small-card {
     background-color: #f2f2f2;
-    padding: 20px;
     margin-bottom: 20px;
     border-radius: 10px;
     border: 1px solid rgba(4, 66, 168, 1);
     height: 300px;
+    display: flex;
+    flex-direction: column;
+    /* stack children vertically */
 }
 
 .tab {
@@ -82,7 +94,7 @@
 
 .tabcontent {
     display: none;
-    padding: 20px 20px;
+    padding: 10px 20px 20px 20px;
     border-top: none;
 }
 
@@ -326,4 +338,136 @@ select option {
     font-size: 12px;
     border-radius: 5px;
     border: 1px solid #0442a8;
+}
+
+.delete-icon,
+.delete-text {
+    display: inline-block;
+    vertical-align: middle;
+    font-size: 12px;
+}
+
+.delete-container {
+    color: #0442a8;
+    cursor: pointer;
+}
+
+.delete-container:hover {
+    color: red;
+    cursor: pointer;
+    transition: color 0.2s;
+}
+
+
+/* FOR PRODUCT LIST */
+#open-product-modal {
+    background-color: #f1f1f1;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 15px 0px;
+    transition: 0.3s;
+    font-size: 16px;
+    color: gray;
+    width: 100%;
+}
+
+#open-product-modal:hover {
+    background-color: rgba(4, 66, 168, 0.2);
+}
+
+.product-item:first-child {
+    margin-top: 10px;
+    border-top: 1px solid rgba(128, 128, 128, 0.234);
+}
+
+.product-item {
+    width: 100%;
+    border-bottom: 1px solid rgba(128, 128, 128, 0.234);
+    padding: 10px 15px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.product-item .product-icon {
+    margin-left: 5px;
+}
+
+.product-info-container {
+    display: flex;
+    flex-direction: column;
+    /* Add this */
+    align-items: start;
+}
+
+/* Initial colors for the icons */
+.fa-edit {
+    color: #0442a8;
+}
+
+.fa-trash {
+    color: #0442a8;
+}
+
+/* Hover colors for the icons */
+.fa-edit:hover {
+    color: orange;
+}
+
+.fa-trash:hover {
+    color: red;
+}
+
+
+/* 
+.icon-container {
+    align-self: center;
+} */
+
+#alertModal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+/* The Modal */
+#alertModal {
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    /* Stay in place */
+    z-index: 102;
+    /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%;
+    /* Full width */
+    height: 100%;
+    /* Full height */
+    overflow: auto;
+    /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4);
+    /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content #alertModal {
+    background-color: #fefefe;
+    margin: 15% auto;
+    /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid rgba(4, 66, 168, 1);
+    width: 30%;
+    height: 50%;
+    border-radius: 10px;
+    /* Could be more or less, depending on screen size */
 }
